[gd_scene load_steps=3 format=3 uid="uid://dcfcmkbkud2ph"]

[ext_resource type="Script" path="res://climb.gd" id="1_5mc51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1m0x"]
size = Vector2(16, 120)

[node name="climb" type="Area2D"]
script = ExtResource("1_5mc51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -58)
shape = SubResource("RectangleShape2D_t1m0x")
debug_color = Color(1, 1, 0, 0.419608)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
